@@ -1,3 +1,14 @@
+2006-12-01  Benoit Jacob <jacob@math.jussieu.fr>
+
+	* src/grid.h, src/grid.cpp: In class OBFloatGrid:
+	cleanup and simplifications, minor optimizations, add a FIXME
+	comment in operator<< about endianness issues, replace a dangerous
+	memset by a for loop. (This memset relied on the fact that the
+	floating-point value 0.0 is represented by the bits 0....0, which
+	happens to be true, but is not something we want to depend on.
+	Plus, compilers are/should be clever enough to make the for loop
+	just as fast.)
+
 2006-11-29  Noel O'Boyle <baoilleach@gmail.com>
 
 	* scripts/openbabel-python.i: Added some SWIG magic that allows the
